--- a/Angular front-end/frontend/src/app/patient/patient.component.html
+++ b/Angular front-end/frontend/src/app/patient/patient.component.html
@@ -10,10 +10,7 @@
     </app-accordion-item>
 
     <app-accordion-item title="Previous Deceises: ">
-      Placeholder information:
-      Placeholder information:
-      Placeholder information:
-      Placeholder information:
+      <app-diseases-list></app-diseases-list>
     </app-accordion-item>
 
     <app-accordion-item title="Medicine Prescription: ">
