--- a/Angular front-end/frontend/src/app/patient/patient.component.html
+++ b/Angular front-end/frontend/src/app/patient/patient.component.html
@@ -22,6 +22,9 @@
       Placeholder information:
       Placeholder information:
     </app-accordion-item>
+    <app-accordion-item title="allergies: ">
+      <app-allergies></app-allergies>
+    </app-accordion-item>
 
     <app-accordion-item title="Alergie Information: ">
       Placeholder information:
