--- a/Angular front-end/frontend/src/app/patient/patient.component.html
+++ b/Angular front-end/frontend/src/app/patient/patient.component.html
@@ -18,9 +18,6 @@
 
     <app-accordion-item title="Medicine Prescription: ">
       Placeholder information:
-      Placeholder information:
-      Placeholder information:
-      Placeholder information:
     </app-accordion-item>
 
     <app-accordion-item title="Alergie Information: ">
@@ -46,9 +43,11 @@
 
     <app-accordion-item title="Notes: ">
       Placeholder information:
-      Placeholder information:
-      Placeholder information:
-      Placeholder information:
+      <li *ngFor="let openepisode of openepisodes">
+        <a href="" class="btn btn-sm btn-primary mr-1">  {{openepisode.patientID}} - {{openepisode.notes}}</a>
+        <br>
+        <br>
+    </li>
     </app-accordion-item>
   </app-accordion>
 </div>
