fixing merge request

--- a/Angular front-end/frontend/src/app/app.component.html
+++ b/Angular front-end/frontend/src/app/app.component.html
@@ -10,7 +10,7 @@
         <button type="button" class="navbar-toggler mr-2 " data-toggle="offcanvas" title="Toggle responsive left sidebar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#" title="Free Bootstrap 4 Admin Template">Appointments</a>
+        <a class="navbar-brand" href="appointments" title="Free Bootstrap 4 Admin Template">Appointments</a>
     </div>
   <div class="flex-row d-flex">
     <button type="button" class="navbar-toggler mr-2 " data-toggle="offcanvas" title="Toggle responsive left sidebar">
