--- a/Angular front-end/frontend/src/app/appointments/appointments.component.html
+++ b/Angular front-end/frontend/src/app/appointments/appointments.component.html
@@ -6,7 +6,7 @@
 
         <th scope="col">#</th>
         <th scope="col">patientID</th>
-        <th scope="col">appointment_Date</th>
+        <th scope="col">appointment Date</th>
         <th scope="col">notesID</th>
       </tr>
       </thead>
@@ -15,7 +15,7 @@
 
         <td>{{ appointment.appointmentID }}</td>
         <td>{{ appointment.patientID }}</td>
-        <td>{{ appointment.appointment_Date }}</td>
+        <td>{{ appointment.appointmentDate }}</td>
         <td>{{ appointment.notesID }}</td>
 
       </tr>
