--- a/Angular front-end/frontend/src/app/patient-list/patient-list.component.html
+++ b/Angular front-end/frontend/src/app/patient-list/patient-list.component.html
@@ -14,7 +14,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let patient of patients">
-          <td>{{ patient.id }}</td>
+          <td>{{ patient.patientID }}</td>
           <td>{{ patient.firstName }}</td>
           <td>{{ patient.lastName }}</td>
           <td>{{ patient.age }}</td>
