fixing things using comments

--- a/Angular front-end/frontend/src/app/Forms/allergies-form/allergies-form.component.html
+++ b/Angular front-end/frontend/src/app/Forms/allergies-form/allergies-form.component.html
@@ -1,4 +1,4 @@
-<div class="card my-5">
+<!-- <div class="card my-5">
   <div class="card-body">
     <form (ngSubmit)="onSubmit()" #allergiesForm="ngForm">
       <div class="form-group">
@@ -46,4 +46,4 @@
     </form>
   </div>
 </div>
-
+ -->
