--- a/Angular front-end/frontend/src/app/Forms/appointments-form/appointments-form.component.html
+++ b/Angular front-end/frontend/src/app/Forms/appointments-form/appointments-form.component.html
@@ -1,4 +1,4 @@
-<div class="card my-5">
+<!-- <div class="card my-5">
   <div class="card-body">
     <form (ngSubmit)="onSubmit()" #appointmentsForm="ngForm">
       <div class="form-group">
@@ -22,7 +22,7 @@
       </div>
       <div [hidden]="!patientID.pristine" class="alert alert-danger">patientID is required</div>
       <div class="form-group">
-        <label for="appointment_Date">Appointment_Date</label>
+        <label for="appointment_Date">AppointmentDate</label>
         <input type="text" [(ngModel)]="appointments.appointment_Date"
                class="form-control"
                id="appointment_Date"
@@ -45,4 +45,4 @@
               class="btn btn-info">Submit</button>
     </form>
   </div>
-</div>
+</div> -->
