--- a/Angular front-end/frontend/src/app/diseases-list/diseases-list.component.html
+++ b/Angular front-end/frontend/src/app/diseases-list/diseases-list.component.html
@@ -11,7 +11,7 @@
         <tbody>
           <tr *ngFor="let disease of diseases">
             <td>{{ disease.diseaseID }}</td>
-            <td>{{ disease.PatientID }}</td>
+            <td>{{ disease.patientID }}</td>
             <td>{{ disease.disease }}</td>
           </tr>
         </tbody>
