--- a/Angular front-end/frontend/src/app/medicine-prescription/medicine-prescription.component.html
+++ b/Angular front-end/frontend/src/app/medicine-prescription/medicine-prescription.component.html
@@ -1,1 +1,18 @@
-<p>medicine-prescription works!</p>
+<div class="card my-5">
+  <div class="card-body">
+    <table class="table table-bordered table-striped">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let medicineprescription of medicineprescriptions">
+          <td>{{ medicineprescription.prescription }}</td>
+          <td> {{medicineprescription.patientID}}</td>
+          <td>{{medicineprescription.prescriptionID}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
