--- a/Angular front-end/frontend/src/app/notes/notes.component.html
+++ b/Angular front-end/frontend/src/app/notes/notes.component.html
@@ -1,1 +1,18 @@
-<p>notes works!</p>
+<div class="card my-5">
+  <div class="card-body">
+    <table class="table table-bordered table-striped">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Notes Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let note of notes">
+          <td>{{note.patientID}} </td>
+          <td>  {{note.notesID}} </td>
+          <td>{{note.notesContent}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
