--- a/Angular front-end/frontend/src/app/patient/patient.component.html
+++ b/Angular front-end/frontend/src/app/patient/patient.component.html
@@ -9,7 +9,7 @@
       Placeholder information:
     </app-accordion-item>
 
-    <app-accordion-item title="Previous Deceises: ">
+    <app-accordion-item title="Previous Diseases: ">
       <app-diseases-list></app-diseases-list>
     </app-accordion-item>
 
@@ -22,10 +22,7 @@
     </app-accordion-item>
 
     <app-accordion-item title="Vaccine Information: ">
-      Placeholder information:
-      Placeholder information:
-      Placeholder information:
-      Placeholder information:
+      <app-vaccine-list></app-vaccine-list>
     </app-accordion-item>
 
     <app-accordion-item title="Lab Results: ">
