Quick updates on the patient page tabs

--- a/Angular front-end/frontend/src/app/dashboard/dashboard.component.html
+++ b/Angular front-end/frontend/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
                           </div>
                           <h6 class="text-uppercase">Patient Name:</h6>
                           <a href="patient">
-                            <h1 class="display-4">Stanimir</h1>
+                            <h1 class="display-4">John Smith</h1>
                           </a>
                           <h6 class="text-uppercase">Apointment Time: 10:30 am.</h6>
                       </div>
@@ -37,7 +37,7 @@
                           </div>
                           <h6 class="text-uppercase">Patient Name:</h6>
                           <a href="patient">
-                            <h1 class="display-4">Wondimu</h1>
+                            <h1 class="display-4">Betty Smith</h1>
                           </a>
                           <h6 class="text-uppercase">Apointment Time:12:30 am.</h6>
                       </div>
@@ -54,25 +54,10 @@
                           </div>
                           <h6 class="text-uppercase">Patient Name:</h6>
                           <a href="patient">
-                            <h1 class="display-4">Vlad</h1>
+                            <h1 class="display-4">John Doe</h1>
                           </a>
                           <h6 class="text-uppercase">Apointment Time: 13:30 pm.</h6>
                       </div>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-sm-6 py-2">
-                  <div class="card text-white bg-warning h-100">
-                      <div class="card-body">
-                          <div class="rotate">
-                              <i class="fa fa-share fa-4x"></i>
-                          </div>
-                          <h6 class="text-uppercase">Patient Name:</h6>
-                          <a href="patient">
-                            <h1 class="display-4">Emko</h1>
-                          </a>
-                            <h6 class="text-uppercase">Apointment Time: 14:30 pm.</h6>
-                      </div>
-                    
                   </div>
               </div>
           </div>
