--- a/Angular front-end/frontend/src/app/dashboard/dashboard.component.css
+++ b/Angular front-end/frontend/src/app/dashboard/dashboard.component.css
@@ -80,3 +80,27 @@ body, html {
 .h2{
   text-align: center;
 }
+
+a:link {
+  color: #FFFFFF;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #FFFFFF;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #FFFFFF;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: #FFFFFF;
+  background-color: transparent;
+  text-decoration: underline;
+}
