--- a/Angular front-end/frontend/src/app/form/appointments-form/appointments-form.component.html
+++ b/Angular front-end/frontend/src/app/form/appointments-form/appointments-form.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="card my-5">
+<div class="card my-5">
   <div class="card-body">
     <form (ngSubmit)="onSubmit()" #appointmentsForm="ngForm">
       <div class="form-group">
@@ -23,7 +23,7 @@
       <div [hidden]="!patientID.pristine" class="alert alert-danger">patientID is required</div>
       <div class="form-group">
         <label for="appointment_Date">AppointmentDate</label>
-        <input type="text" [(ngModel)]="appointments.appointment_Date"
+        <input type="text" [(ngModel)]="appointments.appointmentDate"
                class="form-control"
                id="appointment_Date"
                name="appointment_Date"
@@ -45,4 +45,5 @@
               class="btn btn-info">Submit</button>
     </form>
   </div>
-</div> -->
+</div>
+
