add general information

--- a/Angular front-end/frontend/src/app/patient/patient.component.html
+++ b/Angular front-end/frontend/src/app/patient/patient.component.html
@@ -2,11 +2,13 @@
   <h3>Patient Page:</h3>
 
   <app-accordion>
-    <app-accordion-item title="General Information:">
-      Placeholder information:
-      Placeholder information:
-      Placeholder information:
-      Placeholder information:
+<!--    <app-accordion-item title="General Information:">-->
+<!--      Placeholder information:-->
+<!--      Placeholder information:-->
+<!--      Placeholder information:-->
+<!--      Placeholder information:-->
+    <app-accordion-item title="General Information: ">
+      <app-general-information></app-general-information>
     </app-accordion-item>
 
     <app-accordion-item title="Previous Diseases: ">
