--- a/Angular front-end/frontend/src/app/dashboard/dashboard.component.html
+++ b/Angular front-end/frontend/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
                               <i class="fa fa-user fa-4x"></i>
                           </div>
                           <h6 class="text-uppercase">Patient Name:</h6>
-                          <a href="patient">
+                          <a href="patient/1">
                             <h1 class="display-4">John Smith</h1>
                           </a>
                           <h6 class="text-uppercase">Apointment Time: 10:30 am.</h6>
@@ -36,7 +36,7 @@
                               <i class="fa fa-list fa-4x"></i>
                           </div>
                           <h6 class="text-uppercase">Patient Name:</h6>
-                          <a href="patient">
+                          <a href="patient/2">
                             <h1 class="display-4">Betty Smith</h1>
                           </a>
                           <h6 class="text-uppercase">Apointment Time:12:30 am.</h6>
@@ -53,7 +53,7 @@
                               <i class="fa fa-twitter fa-4x"></i>
                           </div>
                           <h6 class="text-uppercase">Patient Name:</h6>
-                          <a href="patient">
+                          <a href="patient/3">
                             <h1 class="display-4">John Doe</h1>
                           </a>
                           <h6 class="text-uppercase">Apointment Time: 13:30 pm.</h6>
