BugFix for Med Prescription and Allergies

--- a/Angular front-end/frontend/src/app/form/allergies-form/allergies-form.component.html
+++ b/Angular front-end/frontend/src/app/form/allergies-form/allergies-form.component.html
@@ -1,4 +1,4 @@
-<div class="card my-5">
+<!-- <div class="card my-5">
   <div class="card-body">
     <form (ngSubmit)="onSubmit()" #allergiesForm="ngForm">
       <div class="form-group">
@@ -45,5 +45,5 @@
               class="btn btn-info">Submit</button>
     </form>
   </div>
-</div>
+</div> -->
 
