--- a/Angular front-end/frontend/src/app/general-information/general-information.component.html
+++ b/Angular front-end/frontend/src/app/general-information/general-information.component.html
@@ -14,17 +14,14 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-
-        <td>{{ patient?.patientID }}</td>
-        <td>{{ patient?.firstName }}</td>
-        <td>{{ patient?.lastName }}</td>
-        <td>{{ patient?.age }}</td>
-        <td>{{ patient?.address}}</td>
-        <td>{{ patient?.contact}}</td>
-        <td>{{ patient?.emergencyContact}}</td>
-
-
+      <tr *ngFor="let patient of patients" >
+        <td>{{ patient.patientID }}</td>
+        <td>{{ patient.firstName }}</td>
+        <td>{{ patient.lastName }}</td>
+        <td>{{ patient.age }}</td>
+        <td>{{ patient.address}}</td>
+        <td>{{ patient.contact}}</td>
+        <td>{{ patient.emergencyContact}}</td>
       </tr>
       </tbody>
     </table>
