Fixes for patient and medPrescription components

--- a/Angular front-end/frontend/src/app/form/patient-form/patient-form.component.html
+++ b/Angular front-end/frontend/src/app/form/patient-form/patient-form.component.html
@@ -1,4 +1,4 @@
-<div class="card my-5">
+<!-- <div class="card my-5">
   <div class="card-body">
     <form (ngSubmit)="onSubmit()" #patientForm="ngForm">
       <div class="form-group">
@@ -60,4 +60,4 @@
         class="btn btn-info">Submit</button>
     </form>
   </div>
-</div>
+</div> -->
