--- a/Angular front-end/frontend/src/app/app.component.html
+++ b/Angular front-end/frontend/src/app/app.component.html
@@ -29,7 +29,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#myAlert" data-toggle="collapse">GP's Name: Peter</a>
+                <a class="nav-link" (click) ='logout()' href="#myAlert" data-toggle="collapse">Logout</a>
             </li>
         </ul>
     </div>
