--- a/Angular front-end/frontend/src/app/dashboard/dashboard.component.html
+++ b/Angular front-end/frontend/src/app/dashboard/dashboard.component.html
@@ -12,55 +12,7 @@
               </button>
 
           </div>
-          <div class="row mb-3">
-              <div class="col-xl-3 col-sm-6 py-2">
-
-                  <div  class="card bg-success text-white h-100">
-                      <div class="card-body bg-success">
-                          <div class="rotate">
-                              <i class="fa fa-user fa-4x"></i>
-                          </div>
-                          <h6 class="text-uppercase">Patient Name:</h6>
-                          <a href="patients/1">
-                            <h1 class="display-4">John Smith</h1>
-                          </a>
-                          <h6 class="text-uppercase">Apointment Time: 10:30 am.</h6>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-sm-6 py-2">
-                  <div class="card text-white bg-danger h-100">
-
-                      <div class="card-body bg-danger">
-                          <div class="rotate">
-                              <i class="fa fa-list fa-4x"></i>
-                          </div>
-                          <h6 class="text-uppercase">Patient Name:</h6>
-                          <a href="patients/2">
-                            <h1 class="display-4">Betty Smith</h1>
-                          </a>
-                          <h6 class="text-uppercase">Apointment Time:12:30 am.</h6>
-                      </div>
-
-                  </div>
-
-              </div>
-              <div class="col-xl-3 col-sm-6 py-2">
-                  <div class="card text-white bg-info h-100">
-
-                      <div class="card-body bg-info">
-                          <div class="rotate">
-                              <i class="fa fa-twitter fa-4x"></i>
-                          </div>
-                          <h6 class="text-uppercase">Patient Name:</h6>
-                          <a href="patients/3">
-                            <h1 class="display-4">John Doe</h1>
-                          </a>
-                          <h6 class="text-uppercase">Apointment Time: 13:30 pm.</h6>
-                      </div>
-                  </div>
-              </div>
-          </div>
+          <app-appointment-patient1></app-appointment-patient1>
           <!--/row-->
           <!--/row-->
           <!--/row-->
